welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: Missing closing brace `}' assumed here
do{ 		var x:Int=0; avance();
^Poucet:10: error: illegal start of simple expression
	}
        ^Poucet:11: error: 'while' expected but '}' found.
}
^